Fixed reliance on default encoding